# MarketPower

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/services/: accounts.rs  companies.rs  exchange.rs  ledger.rs  mod.rs  portfolio.rs  watch_list.rs
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs  router.rs
